<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/light_gray_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
             app:cardElevation="2dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="center"
                   android:layout_marginTop="18dp"
                   android:fontFamily="@font/sf_pro_display_medium"
                   android:text="@string/hotel_name"
                   android:textColor="@color/black"
                   android:textSize="18sp" />

               <com.denzcoskun.imageslider.ImageSlider
                   android:id="@+id/imageSlider"
                   android:layout_width="match_parent"
                   android:layout_height="257dp"
                   android:layout_marginStart="12dp"
                   android:layout_marginTop="18dp"
                   android:layout_marginEnd="12dp"
                   app:iss_auto_cycle="true"
                   app:iss_delay="1000"
                   app:iss_period="1000"
                   app:iss_title_background="@drawable/default_gradient" />


               <com.google.android.material.button.MaterialButton
                   android:id="@+id/chip"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:backgroundTint="@color/gold_background"
                   android:fontFamily="@font/sf_pro_display_medium"
                   android:paddingHorizontal="9dp"
                   android:text="@string/rating_text"
                   android:textColor="@color/gold"
                   android:textSize="16sp"
                   app:cornerRadius="6dp"
                   app:icon="@drawable/ic_rating_star"
                   app:iconTint="@color/gold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <TextView
                   android:id="@+id/tvHotelName"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:layout_marginTop="12dp"
                   android:fontFamily="@font/sf_pro_display_medium"
                   android:text="@string/hotel_name_text"
                   android:textColor="@color/black"
                   android:textSize="22sp" />

               <TextView
                   android:id="@+id/tvHotelLocation"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:layout_marginTop="8dp"
                   android:fontFamily="@font/sf_pro_display_medium"
                   android:text="@string/hotel_location_text"
                   android:textColor="@color/blue"
                   android:textSize="14sp" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="12dp"
                   android:layout_marginTop="12dp"
                   android:orientation="horizontal">

                  <TextView
                      android:id="@+id/tvHotelPrice"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:fontFamily="@font/sf_pro_display_medium"
                      android:text="@string/price_text"
                      android:textColor="@color/black"
                      android:textSize="30sp" />

                  <TextView
                      android:id="@+id/tvPriceDescription"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="8dp"
                      android:fontFamily="@font/sf_pro_display_medium"
                      android:text="@string/price_description"
                      android:textColor="@color/gray"
                      android:textSize="16sp" />
               </LinearLayout>


            </LinearLayout>

         </androidx.cardview.widget.CardView>

         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             app:cardElevation="1dp"
             app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hotel_detail_title"
                   android:textSize="22sp"
                   android:textColor="@color/black"
                   android:fontFamily="@font/sf_pro_display_medium" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:layout_marginStart="4dp" >
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="16dp"
                      android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/hotel_description_1"
                         android:textSize="16sp"
                         android:background="@drawable/rounded_background"
                         android:textColor="@color/gray"
                         android:fontFamily="@font/sf_pro_display_medium" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/hotel_description_2"
                         android:textSize="16sp"
                         android:textColor="@color/gray"
                         android:background="@drawable/rounded_background"
                         android:layout_marginStart="6dp"
                         android:fontFamily="@font/sf_pro_display_medium"/>

                  </LinearLayout>
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="4dp">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/hotel_description_3"
                         android:background="@drawable/rounded_background"
                         android:textSize="16sp"
                         android:textColor="@color/gray"
                         android:fontFamily="@font/sf_pro_display_medium"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/hotel_description_4"
                         android:textSize="16sp"
                         android:layout_marginStart="6dp"
                         android:background="@drawable/rounded_background"
                         android:textColor="@color/gray"
                         android:fontFamily="@font/sf_pro_display_medium"/>
                  </LinearLayout>
               </LinearLayout>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/hotel_description_summary"
                   android:textSize="16sp"
                   android:layout_marginEnd="12dp"
                   android:layout_marginTop="16dp"
                   android:textColor="@color/black"
                   android:fontFamily="@font/sf_pro_display_medium"/>

               <androidx.cardview.widget.CardView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="4dp"
                   android:layout_marginEnd="4dp"
                   android:layout_marginTop="12dp"
                   android:layout_marginBottom="14dp"
                   app:cardElevation="0dp"
                   android:backgroundTint="@color/light_gray_background"
                   app:cardCornerRadius="15dp">

                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="12dp"
                      android:layout_marginEnd="12dp"
                      android:layout_marginTop="12dp"
                      android:layout_marginBottom="12dp"
                      android:orientation="vertical">

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="38dp"
                         android:orientation="horizontal">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_facilities"
                            android:contentDescription="@string/facilities_icon_content_description" />
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="6dp"
                            android:layout_weight="1"
                            android:orientation="vertical">
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textColor="@color/black"
                               android:textSize="16sp"
                               android:fontFamily="@font/sf_pro_display_medium"
                               android:text="@string/facilities"/>
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"

                               android:textColor="@color/gray"
                               android:textSize="14sp"
                               android:fontFamily="@font/sf_pro_display_medium"
                               android:text="@string/most_important"/>
                        </LinearLayout>

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_navigate_next"
                            android:contentDescription="@string/facilities_detail_icon_content_description" />
                     </LinearLayout>

                     <com.google.android.material.divider.MaterialDivider
                         android:layout_width="match_parent"
                         android:layout_marginTop="8dp"
                         android:layout_marginStart="30dp"
                         android:layout_height="1dp"/>

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="38dp"
                         android:layout_marginTop="16dp"
                         android:orientation="horizontal">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_included"
                            android:contentDescription="@string/icon_included_content_description" />
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="6dp"
                            android:orientation="vertical">
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textColor="@color/black"
                               android:textSize="16sp"
                               android:fontFamily="@font/sf_pro_display_medium"
                               android:text="@string/included"/>
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textColor="@color/gray"
                               android:textSize="14sp"
                               android:fontFamily="@font/sf_pro_display_medium"
                               android:text="@string/most_important"/>
                        </LinearLayout>

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_navigate_next"
                            android:contentDescription="@string/facilities_detail_icon_content_description" />
                     </LinearLayout>

                     <com.google.android.material.divider.MaterialDivider
                         android:layout_width="match_parent"
                         android:layout_marginTop="8dp"
                         android:layout_marginStart="30dp"
                         android:layout_height="1dp"/>

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="38dp"
                         android:layout_marginTop="16dp"
                         android:orientation="horizontal">
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_not_included"
                            android:contentDescription="@string/icon_not_included_content_description" />
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="6dp"
                            android:orientation="vertical">
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="16sp"
                               android:textColor="@color/black"
                               android:fontFamily="@font/sf_pro_display_medium"
                               android:text="@string/not_included"/>
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:textSize="14sp"
                               android:textColor="@color/gray"
                               android:fontFamily="@font/sf_pro_display_medium"
                               android:text="@string/most_important"/>
                        </LinearLayout>

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_navigate_next"
                            android:contentDescription="@string/facilities_detail_icon_content_description" />
                     </LinearLayout>

                  </LinearLayout>

               </androidx.cardview.widget.CardView>

            </LinearLayout>

         </androidx.cardview.widget.CardView>

         <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonNavigateToApartments"
             android:text="@string/navigate_to_apartments"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="12dp"
             android:backgroundTint="@color/blue"
             android:insetTop="0dp"
             android:insetBottom="0dp"
             app:cornerRadius="15dp"
             android:textColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="48dp"/>

      </LinearLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>